name:                 mqttings
version:              0.1.0.0
synopsis:             MQTT all the internet of things
-- description:
-- license:
-- license-file:
homepage:             
author:               Nick B
maintainer:           nick@declension.net
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable mqtt
  main-is:              Main.hs
  other-modules:        Cli
  -- other-extensions:
  build-depends:        base                        >= 4.7 && < 5,
                        stm                         >= 2.4 && < 2.5,
                        text                        >= 0.11.0.6 && < 1.3,
                        utf8-string                 >= 1.0.1.1,
                        optparse-applicative        >= 0.10,
                        mqtt-hs                     >= 1.0
  hs-source-dirs:       src
  default-language:     Haskell2010
